[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ARIAL.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -512.0
margin_right = 512.0
custom_fonts/font = SubResource( 1 )
text = "I don't know what to call this game"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -22.0
margin_right = 20.5
margin_bottom = 22.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 55.0
margin_bottom = 20.0
text = "Start"
flat = true

[node name="LoadButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 55.0
margin_bottom = 44.0
disabled = true
text = "Load"
flat = true

[node name="GHButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 55.0
margin_bottom = 68.0
text = "Github"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 55.0
margin_bottom = 92.0
text = "Quit"
flat = true

[node name="DevButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 78.0
margin_bottom = 92.0
text = "Dev menu"

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 520.0
margin_top = 74.0
margin_right = 540.0
margin_bottom = 94.0

[node name="VersionLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 83.0
text = "placeholder"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/GHButton" to="." method="_on_GHButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DevButton" to="." method="_on_DevButton_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
